# kaigen-automate

./: .env.bak  .gitignore  README.md  env.example  pyproject.toml  requirements.txt  run.py
docs/: import_permit_usage.md
examples/: export_to_spreadsheet.py  import_permit_usage.py
src/: __init__.py  main.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  document.py  import_permit.py  invoice.py
src/domain/repositories/: __init__.py  download_repository.py  import_permit_repository.py  moneyforward_repository.py  spreadsheet_repository.py  upload_repository.py
src/domain/value_objects/: __init__.py  application_config.py  credentials.py  import_permit_items.py  invoice_items.py
src/infrastructure/config/: __init__.py  config_loader.py
src/infrastructure/google_drive/: __init__.py  oauth_helper.py  upload_service.py
src/infrastructure/google_sheets/: __init__.py  spreadsheet_service.py
src/infrastructure/logging/: __init__.py  json_formatter.py  logging_setup.py
src/infrastructure/moneyforward/: __init__.py  accounting_service.py
src/infrastructure/pdf_parser/: __init__.py  gemini_import_permit_parser.py  invoice_parser.py  (+1 more)
src/usecases/: create_accounting_from_import_permit_use_case.py  create_accounting_from_invoice_use_case.py  download_and_upload_use_case.py  download_only_use_case.py  export_import_permit_to_spreadsheet_use_case.py
tests/: conftest.py  test_accounting_service.py  test_create_accounting_use_case.py  test_download_service.py  test_invoice_parser.py  test_pdf_downloader.py  test_upload_service.py  test_use_case.py
(+5 files in other folders)
